--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@vitejs/plugin-react": "^3.0.1",
         "braintree-web": "^3.94.0",
         "braintree-web-drop-in": "^1.37.0",
+        "compressorjs": "^1.2.1",
         "html-react-parser": "^3.0.8",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.40",
