--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^35.4.0",
-        "@ckeditor/ckeditor5-react": "^5.0.6",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
@@ -25,13 +23,13 @@
         "braintree-web": "^3.94.0",
         "braintree-web-drop-in": "^1.37.0",
         "compressorjs": "^1.2.1",
-        "html-react-parser": "^3.0.8",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.40",
         "react-animation-on-scroll": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-ga4": "^2.1.0",
         "react-moment": "^1.1.3",
+        "react-quill": "^2.0.0",
         "react-scripts": "^5.0.1",
         "react-share": "^4.4.1",
         "react-toastify": "^9.1.1",
